# vlrggapi

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  app.json  database.py  debug-compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  docker_dev.yml  smoke.yml
SQL/: notebook.srqlnb
api/: scrape.py
api/scrapers/: __init__.py  event_detail.py  events.py  health.py  match_detail.py  matches.py  news.py  players.py  rankings.py  search.py  stats.py  teams.py
api/utils/: rate_limiter.py
benchmarks/: parser_benchmark.py  parser_optimizations.py
data_management/: db.py  structures.py
frontpage/: index.html
models/: __init__.py  response_models.py
routers/: shared_handlers.py  v1_router.py  v2_router.py  vlr_router.py
tests/: conftest.py  test_endpoints.py  test_match_detail_scraper.py  test_matches_scraper.py  test_news_scraper.py  test_rankings_scraper.py  test_stats_scraper.py  test_team_scraper.py  test_utilities.py
utils/: HTMLReceive.py  cache_manager.py  constants.py  error_handling.py  html_parsers.py  http_client.py  id_mapper.py  pagination.py  resources.py  utils.py
vlrggapi/api/: scrape.py
